# CNET

./: .gitignore  CMakeLists.txt  CNet.h  README.md  helperFuncs.h  layers.h  main.cpp  np.h
